ctm-sf-homeloan-app/main/default/objects/LoanSplit__c/LoanSplit__c.object-meta.xml
<CustomObject>
    <label>Loan Split</label>
    <nameField>
        <label>Loan Split Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Splits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>