ctm-sf-homeloan-app/main/default/objects/LoanSplit__c/fields/fixedInterestTerm__c.field-meta.xml
<CustomField>
    <fullName>fixedInterestTerm__c</fullName>
    <label>Fixed Interest Term</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>