ctm-sf-homeloan-app/main/default/objects/LoanSplit__c/fields/fixInterestTermRemainingMonths__c.field-meta.xml
<CustomField>
    <fullName>fixInterestTermRemainingMonths__c</fullName>
    <label>Fix Interest Term Remaining Months</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>