ctm-sf-homeloan-app/main/default/objects/LoanSplit__c/fields/fixInterestTermRemainingYears__c.field-meta.xml
<CustomField>
    <fullName>fixInterestTermRemainingYears__c</fullName>
    <label>Fix Interest Term Remaining Years</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>