ctm-sf-homeloan-app/main/default/objects/LoanSplit__c/fields/interestOnlyTerm__c.field-meta.xml
<CustomField>
    <fullName>interestOnlyTerm__c</fullName>
    <label>Interest Only Term</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>