ctm-sf-homeloan-app/main/default/objects/LoanSplit__c/fields/interestOnlyTermRemainingMonths__c.field-meta.xml
<CustomField>
    <fullName>interestOnlyTermRemainingMonths__c</fullName>
    <label>Interest Only Term Remaining Months</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>