ctm-sf-homeloan-app/main/default/objects/LoanSplit__c/fields/interestOnlyTermRemainingYears__c.field-meta.xml
<CustomField>
    <fullName>interestOnlyTermRemainingYears__c</fullName>
    <label>Interest Only Term Remaining Years</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>