ctm-sf-homeloan-app/main/default/objects/LoanSplit__c/fields/interestRate__c.field-meta.xml
<CustomField>
    <fullName>interestRate__c</fullName>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>