ctm-sf-homeloan-app/main/default/objects/LoanSplit__c/fields/interestType__c.field-meta.xml
<CustomField>
    <fullName>interestType__c</fullName>
    <label>Interest Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>InterestTypes</valueSetName>
    </valueSet>
</CustomField>