ctm-sf-homeloan-app/main/default/objects/LoanSplit__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>Loan Splits</relationshipLabel>
    <relationshipName>Loan_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>