ctm-sf-homeloan-app/main/default/objects/LoanSplit__c/fields/offsetAccounts__c.field-meta.xml
<CustomField>
    <fullName>offsetAccounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offset Accounts</label>
    <type>Checkbox</type>
</CustomField>