ctm-sf-homeloan-app/main/default/objects/LoanSplit__c/fields/preferredPaymentFrequency__c.field-meta.xml
<CustomField>
    <fullName>preferredPaymentFrequency__c</fullName>
    <label>Preferred Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Periods</valueSetName>
    </valueSet>
</CustomField>