ctm-sf-homeloan-app/main/default/objects/LoanSplit__c/fields/redraw__c.field-meta.xml
<CustomField>
    <fullName>redraw__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redraw</label>
    <type>Checkbox</type>
</CustomField>