ctm-sf-homeloan-app/main/default/objects/LoanSplit__c/fields/repaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>repaymentAmount__c</fullName>
    <label>Repayment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>