ctm-sf-homeloan-app/main/default/objects/LoanSplit__c/fields/repaymentType__c.field-meta.xml
<CustomField>
    <fullName>repaymentType__c</fullName>
    <label>Repayment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RepaymentTypes</valueSetName>
    </valueSet>
</CustomField>