ctm-sf-homeloan-app/main/default/objects/LoanSplit__c/fields/visaDebitCard__c.field-meta.xml
<CustomField>
    <fullName>visaDebitCard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visa Debit Card</label>
    <type>Checkbox</type>
</CustomField>